Add link to demo source code

--- a/slides/index.html
+++ b/slides/index.html
@@ -755,7 +755,9 @@
   <section class="slide">
   <h2>A demo app, with demo problems</h2>
   <div style="text-align: center">
-    <a href='https://rfkelly.dev.lcip.org/notes-demo/'>https://rfkelly.dev.lcip.org/notes-demo/</a></p>
+    <a href='https://rfkelly.dev.lcip.org/notes-demo/'>https://rfkelly.dev.lcip.org/notes-demo/</a>
+    <br/>
+    <a href='https://github.com/rfk/security-bugs-demo'>https://github.com/rfk/security-bugs-demo</a>
   </a>
   </section>
 
